--- a/src/services/bot/package.json
+++ b/src/services/bot/package.json
@@ -12,8 +12,10 @@
   "author": "Dmytry Shvaika",
   "license": "MIT",
   "dependencies": {
-    "moleculer": "^0.13.4",
-    "telegraf": "^3.25.0"
+    "cote": "^0.18.0",
+    "moment": "^2.22.2",
+    "telegraf": "^3.25.0",
+    "telegraf-calendar-telegram": "^1.5.7"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
