--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .vscode
 .idea
 node_modules
-src/services/bot/node_modules
-src/services/db/node_modules
-src/services/uz/node_modules
-src/services/watcher/node_modules
-logs/*
-config/*.json
+logs
+dist
+package-lock.json
