--- a/uz/package.json
+++ b/uz/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "bot_microservice",
+  "name": "uz_client_microservice",
   "version": "1.0.0",
-  "description": "telegram bot microservice",
+  "description": "uz api client microservice",
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DmytryS/uz-booking-bot.git"
+  },
   "scripts": {
-    "start": "node ./dist/bot.service.js",
-    "build": "babel bot.service.js -d dist",
-    "dev": "node app.js",
+    "start": "node ./dist/src/uzClient.service.js",
+    "build": "babel ./src/uzClient.service.js -d dist",
+    "dev": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dmytry Shvaika",
   "license": "MIT",
   "dependencies": {
     "cote": "^0.18.0",
-    "moment": "^2.22.2",
-    "telegraf": "^3.25.0",
-    "telegraf-calendar-telegram": "^1.5.7"
+    "uz-booking-client": "^1.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
