--- a/watcher/package.json
+++ b/watcher/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "db_microservice",
+  "name": "ticket_watcher_microservice",
   "version": "1.0.0",
-  "description": "db microservice",
+  "description": "ticket_watcher_microservice",
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DmytryS/uz-booking-bot.git"
+  },
   "scripts": {
-    "start": "node ./dist/db.service.js",
-    "build": "babel db.service.js -d dist",
-    "dev": "node app.js",
+    "start": "node ./dist/src/watcher.service.js",
+    "build": "babel ./src/watcher.service.js -d dist",
+    "dev": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dmytry Shvaika",
