--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -12,6 +12,6 @@ RUN npm prune --production
 
 FROM base AS release
 COPY --from=dependencies /usr/src/app/node_modules ./node_modules
-COPY --from=dependencies /usr/src/app/dist ./dist
+COPY --from=dependencies /usr/src/app/build ./build
 CMD ["npm", "start"]
 
