--- a/db/package.json
+++ b/db/package.json
@@ -4,26 +4,22 @@
   "description": "db microservice",
   "main": "app.js",
   "scripts": {
-    "start": "node ./dist/src/db.service.js",
-    "build": "babel ./src/db.service.js -d dist",
+    "start": "node ./build/db.service.js",
+    "build": "babel src -d build",
     "dev": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dmytry Shvaika",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "moleculer": "^0.13.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/register": "^7.0.0"
   }
 }
