--- a/bot/.babelrc
+++ b/bot/.babelrc
@@ -1,18 +1,8 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
-  ],
-  "plugins": [
-    "add-module-exports",
-    "transform-class-properties",
-    "transform-decorators",
-    "transform-object-rest-spread",
-    "transform-runtime",
-    "transform-async-to-generator"
-  ],
-  "ignore": ["node_modules"]
+    "presets": [
+        "@babel/preset-env"
+    ],
+    "plugins": [
+        "@babel/plugin-transform-regenerator"
+    ]
 }
