--- a/bot/package.json
+++ b/bot/package.json
@@ -8,29 +8,25 @@
     "url": "https://github.com/DmytryS/uz-booking-bot.git"
   },
   "scripts": {
-    "start": "node ./dist/src/bot.service.js",
-    "build": "babel ./src/bot.service.js -d dist",
+    "start": "node ./build/bot.service.js",
+    "build": "babel src -d build",
     "dev": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dmytry Shvaika",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "cote": "^0.18.0",
     "moment": "^2.22.2",
-    "telegraf": "^3.25.0",
+    "telegraf": "^3.25.5",
     "telegraf-calendar-telegram": "^1.5.7"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/register": "^7.0.0"
   }
 }
