added kubernetes configuration

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 COPY package.json .
 
 ENV NODE_ENV=production
+ENV DB_URL=mongodb://127.0.0.1:27017/uzbooking-bot
 
 RUN npm install --production
 
