code refactoring in progress

--- a/bot/package.json
+++ b/bot/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/DmytryS/uz-booking-bot.git"
   },
   "scripts": {
-    "start": "node ./build/bot.service.js",
-    "build": "babel src -d build",
-    "dev": "node ./src/app.js",
+    "start": "node ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dmytry Shvaika",
