--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,38 +9,18 @@ services:
       - NODE_ENV=production
       - BOT_TOKEN=paste-telegram-token
 
-  uz-requester:
+  watcher:
     build:
       context: .
       dockerfile: uz/Dockerfile
     environment:
       - NODE_ENV=production
-
-  # db:
-  #   build:
-  #     context: .
-  #     dockerfile: db/Dockerfile
-  #   environment:
-  #     - NODE_ENV=production
-
-  # watcher:
-  #   build:
-  #     context: .
-  #     dockerfile: watcher/Dockerfile
-  #   environment:
-  #     - NODE_ENV=production
-
-  # mongo:
-  #   image: "mongo:latest"
-  #   logging:
-  #     driver: none
-  #   ports:
-  #     - 27017:27017
-
-  # rabbitmq:
-  #   image: "rabbitmq:management"
-  #   logging:
-  #     driver: none
-  #   ports:
-  #     - "5672:5672"
-  #     - "15672:15672"
+  mongo:
+      image: "mongo:latest"
+      ports:
+        - 27017:27017
+    rabbitmq:
+      image: "rabbitmq:management"
+      ports:
+        - "5672:5672"
+        - "15672:15672"
