--- a/bot/.babelrc
+++ b/bot/.babelrc
@@ -1,8 +1,9 @@
 {
-    "presets": [
-        "@babel/preset-env"
-    ],
-    "plugins": [
-        "@babel/plugin-transform-regenerator"
-    ]
+  "presets": ["@babel/preset-env"],
+  "env": {
+    "debug": {
+      "sourceMaps": "inline",
+      "retainLines": true
+    }
+  }
 }
