--- a/watcher/.babelrc
+++ b/watcher/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": [
-      "@babel/preset-env"
-  ],
-  "plugins": [
-      "@babel/plugin-transform-regenerator"
-  ]
+    "presets": ["@babel/preset-env"]
 }
