--- a/scripts/config
+++ b/scripts/config
@@ -1,7 +1,15 @@
 apiVersion: v1
 clusters: []
-contexts: []
+contexts:
+- context:
+    cluster: kubernetes
+    user: kubernetes-admin
+  name: kubernetes-admin@kubernetes
 current-context: ""
 kind: Config
 preferences: {}
-users: []
+users:
+- name: kubernetes-admin
+  user:
+    client-certificate: admin-cert.pem
+    client-key: admin-key.pem
