--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ before_script:
 script:
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
 - docker build -t $DOCKER_BOT_REPO:$COMMIT ./bot/
-- docker tag $REPO:$COMMIT $REPO:$TAG
-- docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
+- docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:$TAG
+- docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:travis-$TRAVIS_BUILD_NUMBER
 - docker push $REPO
