--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ before_script:
 - kubectl get pods --all-namespaces
 
 script:
-- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
 - docker build -t $DOCKER_BOT_REPO:$COMMIT ./bot/
-- docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:$TAG
+- 
+- if [ "$TRAVIS_BRANCH" == "master" ]; then docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:latest; fi
 - docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:travis-$TRAVIS_BUILD_NUMBER
-- docker push $REPO
+- docker push $DOCKER_BOT_REPO:$COMMIT
