--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,6 @@ before_script:
 - kubectl get pods --all-namespaces
 
 script:
-- docker build -t $DOCKER_BOT_REPO:$COMMIT ./bot/
-- 
-- if [ "$TRAVIS_BRANCH" == "master" ]; then docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:latest; fi
-- docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:travis-$TRAVIS_BUILD_NUMBER
+- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $DOCKER_BOT_REPO:($TRAVIS_BRANCH | sed -e 's/\//-/g') ; fi`
+- docker build -t $DOCKER_BOT_REPO:$COMMIT -t $DOCKER_BOT_REPO:travis-$TRAVIS_BUILD_NUMBER -t $DOCKER_BOT_REPO:$TAG ./bot/
 - docker push $DOCKER_BOT_REPO:$COMMIT
