--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ script:
 - docker build -t $DOCKER_BOT_REPO:$COMMIT  ./bot/
 - docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:$TAG
 - docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:travis-$TRAVIS_BUILD_NUMBER
-- docker push $DOCKER_BOT_REPO
+- docker push $DOCKER_BOT_REPO:$COMMIT
 - kubectl --namespace=$KUBE_NAMESPACE delete deployment $KUBE_BOT_APP_NAME --cascade=true --ignore-not-found=true
-- kubectl --namespace=$KUBE_NAMESPACE run --image=$DOCKER_BOT_REPO:$TAG $KUBE_BOT_APP_NAME --env="BOT_TOKEN=${BOT_TOKEN}" --env="MONGODB_URI=${MONGODB_URI}"
+- kubectl --namespace=$KUBE_NAMESPACE run --image=$DOCKER_BOT_REPO:$COMMIT $KUBE_BOT_APP_NAME --env="BOT_TOKEN=${BOT_TOKEN}" --env="MONGODB_URI=${MONGODB_URI}"
