--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,9 @@ before_script:
 - kubectl config use-context $KUBE_CLUSTER_CONTEXT
 
 script:
-- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH | sed -e 's/\//-/g' ; fi`
+- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $COMMIT ; fi` #// echo $TRAVIS_BRANCH | sed -e 's/\//-/g'
 - echo $TAG
 - docker build -t $DOCKER_BOT_REPO:$COMMIT  ./bot/
-- docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:$TAG
-- docker tag $DOCKER_BOT_REPO:$COMMIT $DOCKER_BOT_REPO:travis-$TRAVIS_BUILD_NUMBER
 - docker push $DOCKER_BOT_REPO:$COMMIT
 - kubectl --namespace=$KUBE_NAMESPACE delete deployment $KUBE_BOT_APP_NAME --cascade=true --ignore-not-found=true
 - kubectl --namespace=$KUBE_NAMESPACE run --image=$DOCKER_BOT_REPO:$COMMIT $KUBE_BOT_APP_NAME --env="BOT_TOKEN=${BOT_TOKEN}" --env="MONGODB_URI=${MONGODB_URI}"
