--- a/bot/package.json
+++ b/bot/package.json
@@ -9,8 +9,10 @@
   },
   "scripts": {
     "start": "NODE_ENV=production babel-node ./src/app.js",
-    "development": "NODE_ENV=development nodemon --exec babel-node ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development nodemon --exec babel-node ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "prettier --list-different 'src/**/*.js' && eslint 'src/**/*.js'",
+    "lint:fix": "prettier --write 'src/**/*.js' && eslint --fix 'src/**/*.js'"
   },
   "author": "Dmytry Shvaika",
   "license": "MIT",
@@ -28,9 +30,16 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
-    "eslint": "^5.11.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "nodemon": "^1.18.9"
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "nodemon": "^1.18.9",
+    "prettier": "1.16.4"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
