--- a/bot/package.json
+++ b/bot/package.json
@@ -17,6 +17,7 @@
   "author": "Dmytry Shvaika",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.5.3",
     "dotenv": "^6.2.0",
     "log4js": "^3.0.6",
     "moment": "^2.22.2",
