--- a/watcher/.babelrc
+++ b/watcher/.babelrc
@@ -1,3 +1,9 @@
 {
-    "presets": ["@babel/preset-env"]
+  "presets": ["@babel/preset-env"],
+  "env": {
+    "debug": {
+      "sourceMaps": "inline",
+      "retainLines": true
+    }
+  }
 }
