--- a/bot/.eslintrc
+++ b/bot/.eslintrc
@@ -25,6 +25,6 @@
     "trailing-comma": false,
     "import/prefer-default-export": "off",
     "no-console": 1,
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    "no-underscore-dangle": ["error", { "allow": ["_id", "_"] }]
   }
 }
