--- a/planner/package.json
+++ b/planner/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ticket-bot-service",
+  "name": "ticket-watcher-planner-service",
   "version": "1.0.0",
-  "description": "Telegram bot service",
+  "description": "Planner service",
   "main": "app.js",
   "repository": {
     "type": "git",
@@ -19,12 +19,10 @@
   "dependencies": {
     "amqplib": "^0.5.3",
     "dotenv": "^6.2.0",
+    "lodash": "^4.17.11",
     "log4js": "^3.0.6",
-    "moment": "^2.22.2",
-    "mongoose": "^5.4.4",
-    "telegraf": "^3.25.5",
-    "telegraf-calendar-telegram": "^1.5.7",
-    "uz-booking-client": "^1.0.5"
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -37,7 +35,7 @@
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.18.10",
     "prettier": "1.16.4"
   },
   "prettier": {
