--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: "3"
 services:
   mongo:
+    container_name: mongodb
+    hostname: mongodb
     image: "mongo:latest"
+    restart: always
     ports:
       - "27017:27017"
   rabbitmq:
+    container_name: rabbitmq
     image: rabbitmq:3.7-management-alpine
     hostname: rabbitmq
     restart: always
@@ -18,7 +22,7 @@ services:
     build:
       context: .
       dockerfile: bot/Dockerfile
-    restart: on-failure
+    restart: always
     depends_on:
       - rabbitmq
     env_file:
@@ -29,7 +33,7 @@ services:
     build:
       context: .
       dockerfile: watcher/Dockerfile
-    restart: on-failure
+    restart: always
     depends_on:
       - bot
     env_file:
@@ -40,7 +44,7 @@ services:
     build:
       context: .
       dockerfile: planner/Dockerfile
-    restart: on-failure
+    restart: always
     depends_on:
       - watcher
     env_file:
