--- a/planner/package.json
+++ b/planner/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "log4js": "^3.0.6",
-    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "mongoose": "^5.4.4"
   },
   "devDependencies": {
