--- a/bot/.env
+++ b/bot/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=788232145:AAHpImFu61jFkTdds5E7L7xkN42IPkYt5LA
+BOT_TOKEN=PASTE_TELEGRAM_TOKEN_HERE
 MONGODB_URI=mongodb://mongodb:27017/uz-booking
 RABBIT_MQ_URI=amqp://guest:guest@rabbitmq:5672
 RABBIT_RECONNECT_INTERVAL=8000
