--- a/watcher/.babelrc
+++ b/watcher/.babelrc
@@ -1,9 +1,12 @@
 {
-  "presets": ["@babel/preset-env"],
-  "env": {
-    "debug": {
-      "sourceMaps": "inline",
-      "retainLines": true
-    }
-  }
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": true
+        }
+      }
+    ]
+  ]
 }
