--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ before_script:
   - kubectl config use-context $KUBE_CLUSTER_CONTEXT
 script:
   - npm run lint --prefix ./bot
+  - npm run lint --prefix ./planner
+  - npm run lint --prefix ./watcher
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo ${TRAVIS_COMMIT::8} ; fi`
   - docker build -t $DOCKER_BOT_REPO:$TAG ./bot/
   - docker push $DOCKER_BOT_REPO:$TAG
