fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ services:
 branches:
   only:
     - master
-install: npm install --prefix ./bot
+install:
+  - npm install --prefix ./bot
+  - npm install --prefix ./planner
+  - npm install --prefix ./watcher
 before_script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
