--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ services:
 branches:
   only:
     - master
-install: npm install --prefix ./bot
+install:
+  - npm install --prefix ./bot
+  - npm install --prefix ./planner
+  - npm install --prefix ./watcher
 before_script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
@@ -24,6 +27,8 @@ before_script:
   - kubectl config use-context $KUBE_CLUSTER_CONTEXT
 script:
   - npm run lint --prefix ./bot
+  - npm run lint --prefix ./planner
+  - npm run lint --prefix ./watcher
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo ${TRAVIS_COMMIT::8} ; fi`
   - docker build -t $DOCKER_BOT_REPO:$TAG ./bot/
   - docker push $DOCKER_BOT_REPO:$TAG
