--- a/bot/package.json
+++ b/bot/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/DmytryS/uz-booking-bot.git"
   },
   "scripts": {
-    "start": "NODE_ENV=production babel-node ./build/src/app.js",
+    "start": "NODE_ENV=production node ./build/src/app.js",
     "dev": "NODE_ENV=development nodemon --watch src --exec babel-node ./src/app.js",
     "clean": "rm -rf build && mkdir build",
     "build-server": "babel -d ./build ./ -s --ignore 'node_modules/**/*.js'",
